# zvec-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  __main__.py  cli.py  datasets.py  groundtruth.py  harness.py  metrics.py  report.py  results.py  scenarios.py  spec.py
benchmarks/runners/: __init__.py  base.py  engine.py  http.py  inproc.py
benchmarks/vdbbench/: README.md  __init__.py  zvec_rest_client.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md
examples/: README.md  curl_examples.sh  python_client.py
scripts/: publish-image.sh  release.sh
src/zvec_server/: __init__.py  __main__.py  app.py  config.py  deps.py  errors.py  logging.py  manager.py
src/zvec_server/adapter/: __init__.py  collections.py  doc_mapper.py  enums.py  operations.py  query_mapper.py  runtime.py  schema_mapper.py
src/zvec_server/api/: collections.py  health.py  vectors.py
src/zvec_server/auth/: __init__.py  middleware.py  provider.py
src/zvec_server/db/: __init__.py  metadata.py
src/zvec_server/models/: collections.py  common.py  search.py  vectors.py
tests/: conftest.py
tests/benchmarks/: test_groundtruth.py  test_metrics.py  test_spec_scenarios.py
tests/integration/: test_auth.py  test_collections_api.py  test_health.py  test_search_api.py  test_vectors_api.py
tests/unit/: test_auth.py  test_doc_mapper.py  test_enums.py  test_manager.py  test_metadata.py  test_models.py  test_schema_mapper.py
