[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zvec-server"
dynamic = ["version"]
description = "A lightweight, storage-focused HTTP server for the Zvec vector database."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Ali Mansoor", email = "ali7112001@gmail.com" }]
keywords = ["zvec", "vector-database", "fastapi", "vector-search", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "zvec>=0.5.0",
    "readerwriterlock>=1.0.9",
    "python-json-logger>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Benchmarking suite (benchmarks/). Lightweight; pulls numpy/httpx/plots only.
# Track B (the VectorDBBench REST adapter) is intentionally NOT listed here:
# VectorDBBench is a heavy dependency installed manually — see
# benchmarks/vdbbench/README.md.
bench = [
    "numpy>=2.0",
    "httpx>=0.27",
    "psutil>=6.0",
    "h5py>=3.11",
    "matplotlib>=3.9",
]

[project.scripts]
zvec-server = "zvec_server.__main__:main"

[project.urls]
Homepage = "https://github.com/TheAli711/zvec-server"
Repository = "https://github.com/TheAli711/zvec-server"
Issues = "https://github.com/TheAli711/zvec-server/issues"
Changelog = "https://github.com/TheAli711/zvec-server/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/zvec_server/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zvec_server"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in argument defaults

[tool.ruff.lint.per-file-ignores]
# E402: benchmark tests import after a `pytest.importorskip` guard.
"tests/**" = ["B011", "E402"]

[tool.mypy]
python_version = "3.12"
packages = ["zvec_server"]
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Zvec ships its own type hints but the compiled core is partially typed.
module = ["zvec.*", "readerwriterlock.*", "pythonjsonlogger.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]
# Put the repo root on sys.path so the (non-installed) ``benchmarks`` package is
# importable from its unit tests.
pythonpath = ["."]

[tool.coverage.run]
source = ["zvec_server"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
